# RP2040_Projects

./: .gitignore
blink/: CMakeLists.txt  blink.c  main.c
uart/: CMakeLists.txt  main.c
